--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  color: #333;
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.4;
+  background-color: #ffffff;
+  background-image: url("https://www.transparenttextures.com/patterns/clean-textile.png");
+}
+
+.container {
+  padding: 0, .01rem;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  background-color: #000000;
+  background-image: url("https://www.transparenttextures.com/patterns/bedge-grunge.png");
+  color: #fefefe;
+  text-align: center;
+  font-size: 150%;
+  padding: 4rem;
+  box-shadow: -5px .5px 100px 1px #222;
 }
